First commited as before_9119_rev2